<?xml version="1.0"?>
<package format="2">
  <name>op3_offset_tuner_client</name>
  <version>0.2.2</version>
  <description>
    The op3_offset_tuner_client package
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_offset_tuner_client</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>op3_offset_tuner_msgs</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>op3_offset_tuner_server</exec_depend>
</package>
